--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,9 @@
 .App .navbar-brand {
   font-weight: bold;
 }
+
+/* jgcman3 */
+.App .navbar-default {
+  background-color: white;
+  border-color: white;
+}
