--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
-  margin-top: 40px;
+  /* margin-top: 40px; */
+  height: 100%;
 }
 
 .App .navbar-brand {
@@ -7,7 +8,26 @@
 }
 
 /* jgcman3 */
-.App .navbar-default {
-  background-color: white;
-  border-color: white;
+.App .navbar .navbar-default {
+  /* background-color: white;
+  border-color: white; */
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.bgImg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  animation: fadeIn 0.5s linear;
 }
