--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,17 @@
+html,
 body {
+  height: 100%;
   margin: 0;
   padding: 0;
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
-  color: #333;
+  /* color: #333; */
+  color: white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+#root {
+  height: 100%;
 }
 
 h1,
