--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,25 @@
   border-color: white; */
 }
 
+.App-header {
+  padding: 20px;
+  display: flex;
+  align-content: center;
+  justify-content: space-between;
+}
+.App .App-brand .App-brand-title {
+  color: white;
+  font-weight: bold;
+  font-size: large;
+  padding-left: 18px;
+}
+
+.App .App-user .App-user-title {
+  color: white;
+  font-weight: bold;
+  font-size: large;
+  padding-right: 18px;
+}
 @keyframes fadeIn {
   from {
     opacity: 0;
